# aws-nitro-enclaves-python-sdk

./: .dockerignore  .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci-lite.yml  ci.yml
aws_nitro_enclaves/: __init__.py
aws_nitro_enclaves/nsm/: __init__.py  _cffi_build.py  _native.c  _native.py  _native_typing.py  _shim.c  _transport.py  client.py  errors.py  types.py
docs/: DEVELOPMENT.md  index.md  usage.md
examples/: Dockerfile  README.md  demo_app.py  get_random.py
src/: device.rs  lib.rs
tests/: test_client.py
