[package]
name = "aws-nitro-enclaves-python-sdk"
version = "0.1.0"
edition = "2021"
authors = ["AWS Nitro Enclaves SDK Team <nitro-enclaves@example.com>"]
license = "Apache-2.0"
description = "Rust extension backing the AWS Nitro Enclaves Python SDK"

[lib]
name = "aws_nitro_enclaves_nsm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
rand = { version = "0.8", features = ["std"] }
thiserror = "1.0"
sha2 = "0.10"

[features]
default = []
