[build-system]
requires = ["setuptools>=64", "wheel", "cffi>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-nitro-enclaves-python-sdk"
version = "1.0.0"
description = "Python SDK for AWS Nitro Enclaves NSM"
authors = [{ name = "Zhengfa Dang", email = "dantifer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "typing-extensions>=4.7,<5.0",
  "cffi>=1.15"
]

keywords = ["aws", "nitro", "enclave", "nsm"]

[project.optional-dependencies]
verifier = [
  "cryptography>=41,<43",
  "cbor2>=5,<6"
]
dev = [
  "pytest>=7.4,<8.3",
  "mypy>=1.6,<1.11",
  "ruff>=0.1.5,<0.6.0"
]

[project.urls]
Homepage = "https://github.com/zfdang/aws-nitro-enclaves-python-sdk"
Documentation = "https://github.com/zfdang/aws-nitro-enclaves-python-sdk/tree/main/docs"
"Source Code" = "https://github.com/zfdang/aws-nitro-enclaves-python-sdk"
"Issue Tracker" = "https://github.com/zfdang/aws-nitro-enclaves-python-sdk/issues"

[tool.setuptools]
# Only package our Python packages; exclude build artifacts and examples/tests from wheels.
packages = { find = { where = ["."], exclude = [
  "build*", "dist*", ".venv*", "examples*", "tests*", "docs*", ".git*", ".*"
] } }
# Do not include package data from MANIFEST.in in wheels; we want to ship only Python
# modules and compiled extensions. MANIFEST.in still applies to sdist.
include-package-data = false


[tool.ruff]
line-length = 100
target-version = "py38"
# 'extend-select' moved under the 'lint' subsection per ruff's new config format.

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
